--- a/css/theme.css
+++ b/css/theme.css
@@ -2,8 +2,17 @@ body{
 	background-color:white;
 }
 
+a{
+	color: #3f51b5;
+}
+
 a:hover{
 	cursor: pointer;
+	color: #3f51b5;
+}
+
+.github{
+	margin:15px;
 }
 
 .content .article-container{
@@ -48,8 +57,16 @@ a:hover{
 	padding-bottom:15px;
 }
 
-.content  article  .footer{
-	
+.content  article img.photo{
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 80%;
+	display: block;
+	box-shadow: 0 1px 6px 0 rgba(0,0,0,.12),0 1px 6px 0 rgba(0,0,0,.12);
+	border-top:12px solid white;
+	border-right:6px solid white;
+	border-left:6px solid white;
+	border-bottom:12px solid white;
 }
 
 .navbar{
