--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,3 @@
-
-
-.codexamp {
-	position:relative;
-	overflow:hidden;
-	margin-left:0px;
-	margin-right:0px;
-	border-bottom:1px solid lightgray;
-}
-
-.codexamp .window{
-	background-color:blue;
-	width:1800px;
-}
-
-.codexamp .code {
-	position:relative;
-}
-
-.codexamp .examp {
-	position:relative;
+h2 > span{
+	font-size:16px;
 }
