--- a/templates/assignmentFooter.html
+++ b/templates/assignmentFooter.html
@@ -1,8 +1,12 @@
-<span class="progress-title">
-  Deze opdracht is door {{assignment.completedBy.length}} studenten gemaakt
-</span>
-<div class="progress">
-  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{completdByPercentage}}%;">
-    {{assignment.completedByPercentage}} % percentages
+<div ng-show="assignment">
+  <span class="progress-title">
+    Deze opdracht is door {{assignment.completedBy.length}} studenten gemaakt
+    
+  </span>
+  
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{assignment.completdByPercentage }}%;">
+      {{assignment.completedByPercentage}} % percentages
+    </div>
   </div>
 </div>
