--- a/css/main.css
+++ b/css/main.css
@@ -48,9 +48,5 @@ body{
     font-weight: bold;
 }
 
-/** Profile **/
-
-.points{
-	font-weight: bold;
-	font-size:120%;
-}
+.top-buffer { margin-top:30px; }
+.left-buffer { margin-left:30px;}
