--- a/css/theme.css
+++ b/css/theme.css
@@ -1,3 +1,4 @@
+
 body{
 	background-color:white;
 }
@@ -62,9 +63,19 @@ a:hover{
 	color:white;
 }
 
+.content article .header i{
+	float:right;
+}
+
+
+.content article .header i.active {
+	color: #3f51b5;
+}
+
 .content  article  .main {
 	padding-top:15px;
 	padding-bottom:15px;
+	position:relative;
 }
 
 .content  article img.photo{
@@ -185,4 +196,45 @@ span.hard{
 
 .progress .progress-bar, .progress .progress-bar-default{
 	background-color:#3f51b5;
+}
+
+.points{
+	font-weight: bold;
+	font-size:120%;
+	
+}
+
+.codexamp{
+	min-height:200px;
+	overflow: hidden;
+}
+
+
+.codexamp .main img{
+	display: block;
+	margin-left:auto;
+	margin-right:auto;
+	position:absolute;
+	border-left:2px solid white;
+	border-right:2px solid white;
+	border-top:5px solid white;
+	border-bottom:5px solid white;
+	box-shadow: 10px 10px 5px #888888;
+	top:-20px;
+	left: 50%;
+    transform: translate(-50%, 0);
+	max-height: 200px;
+}
+
+.animate-show {
+  padding:10px;
+  border:1px solid black;
+  background:white;
+  -webkit-transition:all linear 0.5s;
+  transition:all linear 0.5s;
+}
+
+.animate-show.ng-hide {
+	margin-top:200px;
+	opacity: 0.8;
 }
