--- a/css/theme.css
+++ b/css/theme.css
@@ -132,17 +132,40 @@ a:hover{
 	margin-top:-6px;
 }
 
+section.sub{
+	border-top: 1px solid lightgray;
+	margin-bottom:-4px;
+	padding-bottom:4px;
+}
+
+section.easy{
+	border-left:3px solid green;
+
+}
+
+
 span.easy{
 	color: green ;
+}
+
+
+
+section.medium{
+	border-left:3px solid gold;
 }
 
 span.medium{
 	color: gold;
 }
 
+section.hard{
+	border-left:3px solid darkred;
+}
+
 span.hard{
 	color:darkred;
 }
+
 
 .easy .header{
 	border-bottom:2px solid green !important;
@@ -168,6 +191,11 @@ span.hard{
 
 .hard .header .glyphicon{
 	color:darkred;
+}
+
+
+.wrong{
+    text-decoration: line-through;
 }
 
 
