--- a/templates/assignmentHeader.html
+++ b/templates/assignmentHeader.html
@@ -5,3 +5,7 @@
 	<div>{{assignment.points}}</div>
 </span>
 <span ng-show="assignment.firstblood" class="glyphicon glyphicon-tint firstblood" title="Firstblood by: {{assignment.firstblood}}" "></span>
+
+<span ng-show="isComplete" class="glyphicon glyphicon-ok-circle complete" title="You have already completed this assignment"></span>
+
+
