--- a/css/main.css
+++ b/css/main.css
@@ -54,4 +54,15 @@ body{
 
 .top-buffer { margin-top:30px; }
 .left-buffer { margin-left:30px;}
+.bottom-buffer {margin-bottom:30px}
 
+
+/*** HELDEN  ****/
+.helden table{
+	width:100%;
+}
+.helden td{
+	text-align: center;
+	border-bottom: 1px solid gray;
+	padding:3px;
+}
