--- a/css/theme.css
+++ b/css/theme.css
@@ -16,6 +16,7 @@ a:hover{
 	margin:15px;
 }
 
+
 .content .article-container{
 	padding:0px;
 	padding-left:15px;
@@ -30,7 +31,7 @@ a:hover{
 .content  article {
 	background-color:white;
 	padding:0px;
-	margin-bottom:45px;
+	margin-bottom:30px;
 	width:100%;
 }
 
@@ -96,10 +97,17 @@ a:hover{
 	margin-right:12px;
 }
 
-
 .navbar{
 	height:200px;
 	margin-bottom:-130px;
+}
+
+.navbar-nav img{
+	padding: 10px 5px;
+	margin: 10px 10px;	
+	margin-top:15px;
+	cursor: pointer;
+	
 }
 
 .sideNav{
@@ -111,7 +119,7 @@ a:hover{
 
 .sideNav .fixedContent{
 	position:relative;
-	margin-top:-45px;
+	margin-top:-30px;
 }
 
 .sideNav .fixedContent .pointer{
@@ -271,4 +279,10 @@ span.hard{
 .animate-show.ng-hide {
 	margin-top:200px;
 	opacity: 0.8;
+}
+
+/** Forms **/
+.form-control{
+	background-image: linear-gradient(#495bc0,#495bc0),linear-gradient(#d2d2d2,#d2d2d2);
+	border-color:#495bc0 !important;
 }
