--- a/Prog5_Opdrachten_Week3/XAMLDemo/MainWindow.xaml
+++ b/Prog5_Opdrachten_Week3/XAMLDemo/MainWindow.xaml
@@ -15,12 +15,15 @@
         <!-- De cell links boven -->
         <Border  Grid.Row="0" Grid.Column="0" BorderBrush="Black" BorderThickness="2">
             <Label HorizontalAlignment="Center" VerticalAlignment="Center"
+                   
                Content="{StaticResource ComboBoxTitle}" Foreground="{StaticResource MainColor}" />
         </Border>
 
         <!-- De cell rechts boven -->
         <Border  Grid.Row="0" Grid.Column="1" BorderBrush="Black" BorderThickness="2">
-             
+
+            <Button Name="clickme" Content="Click me!"></Button>
+            
         </Border>
 
         <!-- De cell links onder -->
