--- a/css/theme.css
+++ b/css/theme.css
@@ -288,3 +288,21 @@ span.hard{
 	background-image: linear-gradient(#495bc0,#495bc0),linear-gradient(#d2d2d2,#d2d2d2);
 	border-color:#495bc0 !important;
 }
+
+.split div:first-child{
+	border-right:1px solid lightgray;		
+}
+
+
+img.responsive{
+	max-width:100%;
+	margin-left:auto;
+	margin-right:auto;
+	display:block;
+}
+
+@media screen and (max-width: 480px) {
+    img.responsive {
+       max-width:70%;
+    }
+}
